--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   dropdown_search: ^3.0.1
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
+  razorpay_flutter: ^1.3.4
+  toast: ^0.2.9
 
 
   # The following adds the Cupertino Icons font to your application.
